--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@adntro/google-cloud-auth",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/adntro/google-cloud-auth"
+  },
   "description": "Google Cloud auth utilitities (get token from functions, local, etc.)",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
