--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prepare": "npm.cmd run compile",
     "pretest": "npm.cmd run compile",
     "posttest": "npm.cmd run lint",
-    "publish": "npm.cmd publish --access public"
+    "predeploy": "npm.cmd run compile",
+    "deploy": "npm.cmd publish --access public"
   },
   "devDependencies": {
     "@types/mocha": "^8.2.2",
